# mmo

./: .gitattributes  .gitignore  Cargo.toml  Makefile  build-wasm.sh  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.json  webpack.config.js
.github/workflows/: main.yml
client/: Cargo.toml
client-browser/src/: index.html  index.js  index.ts  shader.ts  texture.ts
client/src/: app_event.rs  app_state.rs  assets.rs  camera.rs  fetch.rs  font_atlas.rs  fps_counter.rs  game_state.rs  index.html  index.js  lib.rs  main.rs  metrics.rs  render.rs  shader-frag.glsl  shader-vert.glsl  shader.rs  shader2-frag.glsl  shader2-vert.glsl  text-frag.glsl  texture.rs  update.rs  user_input.rs  util.rs  vertex_buffer.rs  vertex_buffer_renderer.rs  ws_connection.rs
client/webroot/: stylesheet.css
client/webroot/assets/: notosans.json
common/: Cargo.toml
common/src/: animation.rs  client_config.rs  lib.rs  movement.rs  object.rs  player_command.rs  player_event.rs  rle.rs  room.rs
data/: config.toml  map.ldtk
server/: Cargo.toml  build.rs
server/src/: assets.rs  client_connection.rs  combat_logic.rs  ldtk_map.rs  main.rs  mob.rs  mob_logic.rs  object.rs  player.rs  room_actor.rs  room_logic.rs  room_state.rs  room_writer.rs  server_actor.rs  server_context.rs  tick.rs  util.rs
webroot/: stylesheet.css
