[package]
name = "mmo-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
vergen-git2 = { version = "1.0", features = ["build"] }

[dependencies]
mmo-common = { path = "../common" }

nalgebra = { version = "0.33", features = ["serde-serialize"] }
postcard = { version = "1.1", features = ["use-std"] }

js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'BinaryType',
  'Blob',
  'Document',
  'Element',
  'ErrorEvent',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'KeyboardEvent',
  'Location',
  'MessageEvent',
  'MouseEvent',
  'Performance',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WebSocket',
  'Window',
]
