[package]
name = "mmo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mmo-common = { path = "../common" }

nalgebra = { version = "0.31", features = ["serde-serialize"] }
postcard = { version = "1.0", features = ["use-std"] }

anyhow = "1.0.71"
axum = { version = "0.7.9", features = ["ws", "tracing"] }
futures-util = "0.3"
log = "0.4"
tokio = { version = "1.15", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
