[package]
name = "mmo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mmo-common = { path = "../common" }

nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
postcard = { version = "1.1.1", features = ["use-std"] }

anyhow = "1.0.71"
axum = { version = "0.7", features = ["ws", "tracing"] }
futures-util = "0.3"
tokio = { version = "1.42", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha1 = "0.10"
